--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <div class="header_div">
      <header>
-          <H1 class="Mike"> Mike Hageali</H1>
+          <h1 class="Mike"> Mike Hageali</h1>
      </header>
      
        
@@ -34,7 +34,7 @@
 
 
       <section class= "content_section">
-               <H1>About Me</H1>
+               <h1>About Me</h1>
                <!-- Insert Line with hr tag-->   
                <hr>
 
